--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^5.1.0",
+    "mysql2": "^3.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
